packages/apex-parser-ast/test/fixtures/validation/syntax-error/UnexpectedToken.cls
public class UnexpectedToken {
    public void test() {
        @
    }
}
